# mon-artist

./: .gitignore  Cargo.toml  README.md  demo.html  tango-build.rs
src/: directions.md  format.md  grid.md  lib.md  lib.rs  mod.md  mona.rs  monort.md  monort.rs  path.md  test_data.md  text.md
src/find_path/: mod.md  tests.md
src/grammar/: mod.rs  rules.lalrpop
src/lit/: directions.md  find_text.md  grid.md  path.md
src/lit/src/: default_input.md  format.md  grid.md  mod.md  path.md
src/lit/src/find_path/: mod.md  tests.md
src/lit/src/render/: mod.md  svg.md
src/lit/svg/: color.md
src/render/: mod.md  svg.md
src/svg/: mod.md
