[package]
name = "reduction"
version = "0.1.1"
authors = ["pnkfelix"]
build = "tango-build.rs"
description = "Reduction of bug observed in mon-artist builds"
license = "MIT/Apache-2.0"
repository = "https://github.com/pnkfelix/mon-artist"
include = ["src/**/*.rs", "src/**/*.md", "tango-build.rs", "Cargo.toml"]

# Since the lib starts as a tango file stored in `src/lib.md`,
# explicitly specify that this is a library project with a
# `[lib]` section (which then requires an explicit name).

[lib]
name = "mon_artist"
path = "src/lib.rs"
